...
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:focusable="false"
        android:focusableInTouchMode="true">

        <EditText
            android:id="@+id/editSearch"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:hint="Search..."

            ></EditText>
        <Button
            android:layout_width="wrap_content"
            android:backgroundTint="@color/cardview_shadow_end_color"
            android:layout_height="35dp"
            android:textSize="7dp"
            android:text="Search"
            android:id="@+id/searchButton"></Button>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
            android:layout_height="wrap_content"
            android:text="Price: "></TextView>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/price_spinner"></Spinner>

    </LinearLayout>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listView"
        />
</LinearLayout>
